--- a/DAY_2_Assignments_.ipynb
+++ b/DAY_2_Assignments_.ipynb
@@ -116,7 +116,7 @@
           "output_type": "stream",
           "text": [
             "abcdefghijklmnopqrstuvwxyz\n",
-            "The String is a Panagram\n"
+            "The string is a Panagram\n"
           ],
           "name": "stdout"
         }
